--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/blog/new">Ajouter un article</a>
                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">Modifier un article</a>
+                    </li>
                 </ul>
                 <!-- Search engine -->
                 <form class="form-inline my-2 my-lg-0">
