--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -1,5 +1,10 @@
 {%  extends 'base.html.twig' %}
 
+{# Dans   config > packages > ! twig.yaml  il faut ajouter  form_themes: ['bootstrap_4_layout.html.twig'] #}
+
+{%  form_theme formArticle 'bootstrap_4_layout.html.twig'  %}
+
+
 
 
 {%  block body %}
