Interface d'administration: Ajout et suppression d'un article

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/blog/new">Ajouter un article</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Modifier un article</a>
+                            <a class="nav-link" href="/blog/listArticles">Modifier un article</a>
                     </li>
                 </ul>
                 <!-- Search engine -->
