--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,10 +19,7 @@
                         <a class="nav-link" href="/blog">Articles <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog/new">Ajouter un article</a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link" href="/blog/listArticles">Modifier un article</a>
+                            <a class="nav-link" href="/blog/listArticles">Admin interface</a>
                     </li>
                 </ul>
                 <!-- Search engine -->
