--- a/templates/blog/liste-articles.html.twig
+++ b/templates/blog/liste-articles.html.twig
@@ -8,7 +8,7 @@
     <table class="table table-hover">
   
         <tr class="table-active">
-            <th scope="row" style="text-align:right; "><button type="button" class="btn btn-secondary"><a class="  nav-link " href="/blog/new" style="color:white;" onmouseover="this.style.color='#FFFF99' "; onmouseout="this.style.color='white';"><b>Ajouter un article</b></a></button></th>
+            <th scope="row" style="text-align:right; "><button type="button" class="btn btn-success"><a class="  nav-link " href="/blog/new" style="color:white;" onmouseover="this.style.color='#FFFF99' "; onmouseout="this.style.color='white';"><b>Ajouter un article</b></a></button></th>
         </tr>  
     </table>
   </section>
@@ -18,12 +18,12 @@
                 <thead>
                   <tr>
                     <th scope="col">ID</th>
-                    <th scope="col" style="color:rgb(20, 4, 41);">DATE</th>
-                    <th scope="col" style="color:rgb(20, 4, 41);">TITRE</th>
-                    <th scope="col" style="color:rgb(20, 4, 41);">IMAGE</th>
-                    <th scope="col" style="color:rgb(57, 14, 114);">Delet comment</th>
-                    <th scope="col" style="color:rgb(57, 14, 114);">Delet article</th>
-                    <th scope="col" style="color:rgb(57, 14, 114);">Edit  article </th>
+                    <th scope="col" style="color:rgb(20, 4, 41);   font-size: 12px;">DATE</th>
+                    <th scope="col" style="color:rgb(20, 4, 41);   font-size: 12px;">TITRE</th>
+                    <th scope="col" style="color:rgb(20, 4, 41);   font-size: 12px;">IMAGE</th>
+                    <th scope="col" style="color:rgb(57, 14, 114); font-size: 12px;">Delet comment</th>
+                    <th scope="col" style="color:rgb(57, 14, 114); font-size: 12px;">Delet article</th>
+                    <th scope="col" style="color:rgb(57, 14, 114); font-size: 12px;">Edit  article </th>
                   </tr>
                 </thead>
            {%  for article in articles %} 
