--- a/templates/blog/liste-articles.html.twig
+++ b/templates/blog/liste-articles.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello {{controller_name }}!{% endblock %}
 
 {% block body %}
-  <section class="articles" style="margin-top:20px;"> 
+  <section class="articles" style="margin-top:20px; margin-bottom:20px;"> 
      <tbody>
     <table class="table table-hover">
   
@@ -26,6 +26,7 @@
                     <th scope="col" style="color:rgb(57, 14, 114); font-size: 12px;">Edit  article </th>
                   </tr>
                 </thead>
+                
            {%  for article in articles %} 
             <tbody>
               <tr class="table-active">
