--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -13,16 +13,19 @@
 
 {{  form_start(formArticle) }}
 
-{{  form_row(formArticle.title,  {'attr': {'placeholder':"Titre de l'article"}}) }}
-{{  form_row(formArticle.content,  {'attr': { 'placeholder':"contenu de l'article"}}) }}
-{{  form_row(formArticle.image,  {'attr': {'placeholder':"URL de l'image"}}) }}
-<button type="submit" class="btn btn-success">
-    {%  if editMode %}
-       Enregistrer les modifications
-    {%  else %}   
-       Ajouter l'article
-    {%  endif %}
-</button>
+   {{  form_row(formArticle.title,  {'attr': {'placeholder':"Titre de l'article"}}) }}
+   {{  form_row(formArticle.category) }}
+   {{  form_row(formArticle.content,  {'attr': { 'placeholder':"contenu de l'article"}}) }}
+   {{  form_row(formArticle.image,  {'attr': {'placeholder':"URL de l'image"}}) }}
+
+   <button type="submit" class="btn btn-success">
+      {%  if editMode %}
+         Enregistrer les modifications
+      {%  else %}   
+         Ajouter l'article
+      {%  endif %}
+   </button>
+
 {{  form_end(formArticle) }}
 
 {%  endblock %}
