--- a/templates/blog/edit.html.twig
+++ b/templates/blog/edit.html.twig
@@ -9,11 +9,19 @@
 
 {%  block body %}
 
-<h1>Mise &agrave; jour de l'article</h1>
+<h1>
+   {%  if editMode %} 
+      Mise &agrave; jour de l'article
+      {%  else %}   
+      Nouvel article
+   {%  endif %}
+  
+</h1>
 
 {{  form_start(formArticle) }}
 
 {{  form_row(formArticle.title,  {'attr': {'placeholder':"Titre de l'article"}}) }}
+{{  form_row(formArticle.category) }}
 {{  form_row(formArticle.content,  {'attr': { 'placeholder':"contenu de l'article"}})   }}
 {{  form_row(formArticle.image,  {'attr': {'placeholder':"URL de l'image"}}) }}
 <button type="submit" class="btn btn-success">
