--- a/templates/blog/show_admin.html.twig
+++ b/templates/blog/show_admin.html.twig
@@ -21,27 +21,23 @@
       {%  for comment in article.comments %}
       <div class="comment">
           <div class="row">
-              <!--
-              <div class="col-3">
-                    {{comment.author}} (<small>{{comment.createdAt | date('d/m/Y &agrave; H:i ')}}</small>)
-              </div>
-              -->
-              <div class="col-3">
+                <div class="col-3">
                     <div class="card bg-light mb-3" style="max-width: 20rem;">
                             <div class="card-header"> {{comment.author}}</div>
                             <div class="card-body">
                                 <p class="card-text"><small>{{comment.createdAt | date('d/m/Y &agrave; H:i ')}}</small></p>
                             </div>
+                            <button type="button" class="btn btn-danger"><a class="  nav-link " href="/delet_comment/{id}" style="color:white;" onmouseover="this.style.color='#FFFF99' "; onmouseout="this.style.color='white';"><b>Delet comment</b></a></button>
                     </div>            
-              </div>
-              
-              <div class="col">
-                    <div class="card bg-light mb-3" style="max-width: 50rem;">                      
-                            <div class="card-body">
-                            <p class="card-text">{{comment.content | raw}}</p>
-                            </div>  
-                    </div> 
-              </div>           
+                </div>
+                <div class="col">
+                        <div class="card bg-light mb-3" style="max-width: 50rem;">                      
+                                <div class="card-body">
+                                <p class="card-text">{{comment.content | raw}}</p>
+                                </div>  
+                        </div> 
+                </div> 
+
           </div>
       </div>
       {%  endfor %}
