--- a/templates/blog/show_admin.html.twig
+++ b/templates/blog/show_admin.html.twig
@@ -27,7 +27,7 @@
                             <div class="card-body">
                                 <p class="card-text"><small>{{comment.createdAt | date('d/m/Y &agrave; H:i ')}}</small></p>
                             </div>
-                            <button type="button" class="btn btn-danger"><a class="  nav-link " href="/delet_comment/{id}" style="color:white;" onmouseover="this.style.color='#FFFF99' "; onmouseout="this.style.color='white';"><b>Delet comment</b></a></button>
+                            <button type="button" class="btn btn-danger"><a class="nav-link" href="{{ path( 'comment_delet', {'id':comment.id} ) }}"  style="color:white;" onmouseover="this.style.color='#FFFF99' "; onmouseout="this.style.color='white';"><b>Delet comment</b></a></button>
                     </div>            
                 </div>
                 <div class="col">
