--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+ 
 {% block body %}
     <article>
             <h2> {{ article.title  }}</h2>
@@ -18,9 +18,14 @@
     
     <!-- On ajoute les commentaire relatif a l'article | c'dingue !!! Merci Lior  -->
     <section id = "commentaires" style = "margin-top:40px;">
-        
+      <p id="just-pour-le-hover">
+      <small style="float:left;" ><i class="material-icons icon-commentaire"  >comment</i></small>
+      <small style="float:left; " id="link-comment">Commenter</small>
+      </p>
       <small style="float:right;"><b></b> {{ article.comments | length }} Commentaires</b></small>
       <hr style="padding-bottom:30px;">
+
+
       {%  for comment in article.comments %}
       <div class="comment">
           <div class="row">
@@ -39,18 +44,20 @@
               </div>           
           </div>
       </div>
-       {%  endfor %}
-
-      {# {%  if app.user %} #}
-      {{ form_start(commentForm) }}
-      {{ form_row(commentForm.author, {'attr':{'placehold':"Votre nom"}}) }}
-      {{ form_row(commentForm.content, {'attr':{'placehold':"Votre commentaire"}}) }}
-      <button type="submit" class="btn btn-success">Commenter !</button>
-      {{ form_end(commentForm) }} 
-      {# {%  else %}    #}  
-      <!--  <h4>Connectez-vous pour commenter !</h4>  --> 
-      <!-- <a href=" {#{{path('security-login')}}#}" class="btn btn-primary"> Connexion</a> -->
-      {# {%  endif %} #}
+      {%  endfor %}
+      <!-- formulaire pour commenter-->
+      <div id="div-comment"  >
+            {# {%  if app.user %} #}
+            {{ form_start(commentForm) }}
+            {{ form_row(commentForm.author, {'attr':{'placehold':"Votre nom"}}) }}
+            {{ form_row(commentForm.content, {'attr':{'placehold':"Votre commentaire"}}) }}
+            <button type="submit" class="btn btn-success">Commenter !</button>
+            {{ form_end(commentForm) }} 
+            {# {%  else %}    #}  
+            <!--  <h4>Connectez-vous pour commenter !</h4>  --> 
+            <!-- <a href=" {#{{path('security-login')}}#}" class="btn btn-primary"> Connexion</a> -->
+            {# {%  endif %} #}
+     </div>
 
     </section>
 {% endblock %}
