base.html.twig: twig nous permet d'afficher soit la connexion soit la deconnexion aulieu d'avoir de lien - et cela sans le moindre javascript !

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,15 @@
                     <li class="nav-item">
                             <a class="nav-link" href="/blog/listArticles">Admin-interface</a>
                     </li>
+                    {%  if not app.user %}
+                    <li class="nav-item">
+                            <a class="nav-link" href="{{path('security_login')}}">Connexion</a>
+                    </li>
+                    {%  else %}
+                    <li class="nav-item">
+                            <a class="nav-link" href="{{path('security_logout')}}">D&eacute;connexion</a>
+                    </li>
+                    {%  endif %}
                 </ul>
                 <!-- Search engine -->
                 <form class="form-inline my-2 my-lg-0">
