--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -6,19 +6,25 @@
       <p>Dans le mm formulaire il faut qu'on puisse se loger en tant que simple utilisateur ou en tant qu'administrateur</p>
       <p>Sur ce, il faut voir la doc symfony sur la notion de ROLE. Et implementer dans le branche 5.ROLES </p>
       <p> Mais avant: il faut resoudre mes 2 probleme de redirection</p>
-       <h4> Listes des taches</h4>
+       <h4> Tasks list</h4>
        <ul class="list-group">
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Redirection vers le m&ecirc;me  article apr&egrave;s une suppression de commentaire
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                  Redirection vers le m&ecirc;me  article apr&egrave;s une connexion
                     <span class="badge badge-primary badge-pill">3</span>
+                    Redirection vers le m&ecirc;me  article apr&egrave;s une suppression de commentaire  
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    BRANCHE 5.ROLES: Connexion en tant qu'administrateur - notion de ROLES  -
+                    <span class="badge badge-primary badge-pill">4</span>
+                    Redirection vers le m&ecirc;me  article apr&egrave;s une connexion                  
+                  </li>
+                  
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
                     <span class="badge badge-primary badge-pill">1</span>
+                    BRANCHE 5.ROLES: Connexion en tant qu'administrateur - notion de ROLES  -                 
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <span class="badge badge-primary badge-pill">2</span>
+                    Virer le menu Admin-interface :  Si connect&eacute; en tant qu'administrateur <br>
+                    -> redirection vers href="/blog/listArticles" pour administrer le site                 
                   </li>
                 </ul>
       
